--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
   <body >
     <h1 class="">MOVIES</h1>
     <section class="display-2 text-center text-danger bg-dark">
-      Scarface
+      <div class="card">
+       Scarface 
+      </div>
+      <div id="LEmovie" class="card">
+        <h1>
+         Interstellar 
+        </h1>
+        <img src="https://pics.filmaffinity.com/Interstellar-366875261-large.jpg" alt="">
+        <p class="size">A team of explorers travel through a wormhole in space in an attempt to ensure humanity's survival.</p>
+      </div>
+      
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
